--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,16 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.2.3.Final</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
